<resources>
    <string name="app_name">Practicum-Android-Diploma</string>

    <!-- bottom navigation (bn) menu items-->
    <string name="bn_main">Главная</string>
    <string name="bn_favorites">Избранное</string>
    <string name="bn_team">Команда</string>

    <!-- team members screen (alphabetically) -->
    <string name="fragment_team_title">Команда</string>

    <string name="made_by">Над приложением работали</string>

    <string name="member1">Александр Корытин</string>
    <string name="member2">Данила Морозов</string>
    <string name="member3">Сергей Овсейчик</string>
    <string name="member4">Аслан Шкахов</string>
    <string name="search_screen_title_text">Поиск вакансий</string>
    <string name="search_hint_text">Введите запрос</string>
    <string name="vacancy_count_chips_text">Найдено 213 вакансий</string>
    <string name="no_internet_error_text">Нет интернета</string>
    <string name="app_not_found">Приложение не найдено</string>
    <string name="no_internet">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="empty">Не удалось получить\nсписок вакансий</string>
    <string name="empty_salary">Зарплата не указана</string>
    <string name="favorite_screen_title_text">Избранное</string>
    <string name="favorite_empty_list_error_text">Список пуст</string>
    <string name="favorite_db_error_text">Не удалось получить\nсписок вакансий</string>
    <string name="employer_title_plus_city">%1$s, %2$s</string>
    <plurals name="items_found_number">
        <item quantity="zero">Найдено %1$d вакансий</item>
        <item quantity="one">Найдена %1$d вакансия</item>
        <item quantity="two">Найдено %1$d вакансии</item>
        <item quantity="few">Найдено %1$d вакансий</item>
        <item quantity="many">Найдено %1$d вакансий</item>
        <item quantity="other">Найдено %1$d вакансий</item>
    </plurals>

    <string name="vacancy">Вакансия</string>
    <string name="experience">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="contact_person">Контактное лицо</string>
    <string name="email">Email</string>
    <string name="phone">Телефон</string>
    <string name="comment">Комментарий</string>
    <string name="error_while_loading_page">Произошла ошибка</string>
    <string name="no_internet_while_loading_page">Проверьте подключение к интернету</string>
    <string name="location_type_fragment_title">Выбор места работы</string>
    <string name="hint_region_text">Регион</string>
    <string name="hint_country_text">Страна</string>
    <string name="btn_apply_text">Выбрать</string>
    <string name="city_picker_title">Выбор региона</string>
    <string name="choose_region_hint">Введите регион</string>
    <string name="country_choose_title_text">Выбор страны</string>
    <string name="choose_industry_hint">Введите отрасль</string>
    <string name="industry_choose_title_text">Выбор отрасли</string>
    <string name="sucsess" translatable="false">OK</string>

    <string name="filter_settings">Настройки фильтрации</string>
    <string name="workplace">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="input_salary">Введите сумму</string>
    <string name="do_not_show__without_salary">Не показывать без зарплаты</string>
    <string name="apply">Применить</string>
    <string name="clear">Сбросить</string>
    <string name="region_not_found">Такого региона нет</string>
    <string name="empty_industry_list">Не удалось получить\nсписок отраслей</string>
    <string name="repeat">Повторить</string>
    <string name="not_saved_in_favorite">Не удалось добавить в избранное</string>
    <string name="ok_saved_in_favorite">Вакансия добавлена и избранное</string>
    <string name="vacancy_already_in_favorite">Вакансия уже в избранном</string>
    <string name="dialog_del_message_favorute">Хотите удалить вакансию из избранного?</string>
    <string name="dialog_yes">Да</string>
    <string name="dilog_no">Нет</string>
</resources>
