<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/screen_background_color"
    tools:context="ui.filter.fragment.FilterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_16dp" />

    <LinearLayout
        android:id="@+id/filter_settings_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_8dp"
        android:paddingStart="@dimen/_4dp"
        android:paddingEnd="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4dp"
            android:background="@android:color/transparent"
            android:padding="@dimen/_8dp"
            app:srcCompat="@drawable/ic_arrow_back"
            app:tint="?attr/text_color" />

        <TextView
            android:id="@+id/filter_settings_title"
            style="@style/YsDisplayMedium22"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_4dp"
            android:layout_weight="1"
            android:text="@string/filter_settings"
            android:textColor="?attr/text_color" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/workplace"
        style="@style/FilterFilledBoxStyle"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/workplace"
        android:paddingEnd="@dimen/_4dp"
        android:textAppearance="@style/YsDisplayRegular16"
        android:textColor="?attr/text_color"
        app:boxStrokeWidth="@dimen/_0dp"
        app:endIconDrawable="@drawable/ic_arrow_forward"
        app:endIconMode="custom"
        app:endIconTint="?attr/text_color"
        app:hintTextAppearance="@style/YsDisplayRegular12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/filter_settings_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/workplace_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="none"
            android:paddingStart="@dimen/_0dp"
            android:textAppearance="@style/YsDisplayRegular16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/industry"
        style="@style/FilterFilledBoxStyle"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:hint="@string/industry"
        android:paddingEnd="@dimen/_4dp"
        android:textAppearance="@style/YsDisplayRegular16"
        android:textColor="?attr/text_color"
        app:boxStrokeWidth="@dimen/_0dp"
        app:endIconDrawable="@drawable/ic_arrow_forward"
        app:endIconMode="custom"
        app:endIconTint="?attr/text_color"
        app:hintTextAppearance="@style/YsDisplayRegular12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/workplace">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/industry_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="none"
            android:paddingStart="@dimen/_0dp"
            android:textAppearance="@style/YsDisplayRegular16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expected_salary"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:hint="@string/expected_salary"
        android:textColorHint="?attr/hint_text_color"
        android:theme="@style/ThemeFilterMenuItemSalaryOverlay.AppTheme.TextInputEditText.FilledBox"
        app:boxStrokeWidth="@dimen/_0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconMode="custom"
        app:endIconTint="?attr/black_universal"
        app:expandedHintEnabled="false"
        app:hintTextAppearance="@style/YsDisplayRegular12"
        app:hintTextColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/industry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/expected_salary_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_input_field_bg_shape"
            android:hint="@string/input_salary"
            android:inputType="number"
            android:maxLength="9"
            android:textAppearance="@style/YsDisplayRegular16"
            android:textColor="?attr/black_universal"
            android:textColorHint="?attr/hint_text_color"
            android:textCursorDrawable="@drawable/color_cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/do_not_show_without_salary"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_6dp"
        android:paddingEnd="@dimen/_4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/expected_salary">

        <TextView
            android:id="@+id/do_not_show_without_salary_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/do_not_show__without_salary"
            android:textAppearance="@style/YsDisplayRegular16"
            android:textColor="?attr/text_color" />

        <CheckBox
            android:id="@+id/do_not_show_without_salary_checkbox"
            style="@style/check_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:checked="false" />
    </LinearLayout>

    <Button
        android:id="@+id/apply_filter_settings_button"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:backgroundTint="?attr/blue"
        android:minHeight="@dimen/_59dp"
        android:text="@string/apply"
        android:textAppearance="@style/YsDisplayMedium16"
        android:textColor="?attr/white_universal"
        app:cornerRadius="@dimen/_12dp"
        app:layout_constraintBottom_toTopOf="@id/clear_filter_settings_button"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline" />

    <Button
        android:id="@+id/clear_filter_settings_button"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_24dp"
        android:backgroundTint="@android:color/transparent"
        android:minHeight="@dimen/_59dp"
        android:text="@string/clear"
        android:textAppearance="@style/YsDisplayMedium16"
        android:textColor="?attr/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline" />


</androidx.constraintlayout.widget.ConstraintLayout>
